# raylib-cmake-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  ubuntu.yml
cmake/: raylib-configuration.cmake
src/: main.cpp
